ingresses/nodeapp_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodeapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nodeapp.cs.odu.edu
    http:
      paths:
      - path: /
        backend:
          serviceName: nodeapp
          servicePort: 3000
